--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^12.0.2",
+    "http": "^0.0.0",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
   }
