--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/koa": "^2.0.48",
     "@types/node": "^12.0.2",
     "http": "^0.0.0",
+    "koa": "^2.7.0",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
+  },
+  "scripts": {
+    "start": "ts-node app.ts",
+    "start:server": "ts-node server.ts"
   }
 }
